# battery_overlay

./: .gitignore  Makefile  README.md  battery.h  battery_overlay.c  battery_overlay.cpp  battery_overlay.pro  battery_overlay.py  main.cpp  program.c  pyproject.toml  qrc_resources.cpp  resources.qrc
image_converter/: image_converter.py  pyproject.toml
images/: compiled.h  images.h  listing.json  listing.txt
